CI: Ignore if google play release errors
This might happen if a build is already released manually (for this release 2.1.1-21107 this had to happen in order to fill a new special permission form)

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -105,6 +105,7 @@ jobs:
           SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
       - uses: r0adkll/upload-google-play@v1
+        continue-on-error: true
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.dot.gallery.gplay
