CI: Fix artifact upload
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: Gallery Release (No Maps)
-          path: app/build/outputs/apk/release/Gallery-${{ steps.versionname.outputs.versionName }}-${{ steps.versioncode.outputs.versionCode }}-release.apk
+          path: app/build/**/*.apk
 
   build_maps:
     runs-on: ubuntu-latest
@@ -94,7 +94,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: Gallery Release (Maps)
-          path: app/build/outputs/apk/release/Gallery-${{ steps.versionname.outputs.versionName }}-${{ steps.versioncode.outputs.versionCode }}-release.apk
+          path: app/build/**/*.apk
 
   release:
     needs: [build_nomaps, build_maps]
