Gallery: Strip all files permission for google play release (does not pass review)
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -97,7 +97,9 @@ jobs:
         run: git config --global user.email "paulionut2003@gmail.com" &&
           git config --global user.name "IacobIonut01" &&
           git fetch https://github.com/IacobIonut01/Gallery.git main_play &&
-          git cherry-pick e63cd751baa1dc733222d5a3ce135cb7bc52868b
+          git cherry-pick e63cd751baa1dc733222d5a3ce135cb7bc52868b &&
+          chmod +x ./strip_allfiles_permission.sh && ./strip_allfiles_permission.sh &&
+          echo ALL_FILES_ACCESS=false > ./app.properties
       - name: Build Google Play Bundle
         run: ./gradlew bundleGplay
         env: 
