--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -133,6 +133,8 @@ jobs:
           name: Gallery Release (Maps)
       - name: Remove apk release suffix
         run: find . -name "Gallery-*.apk" -exec bash -c 'mv "$1" "${1//-release/}"' _ {} \;
+      - name: Generate SHA256
+        run: find . -name "Gallery-*.apk" -exec bash -c 'sha256sum "$1" | awk '{print $1}' > "${file}.sha256' _ {} \;
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -142,5 +144,6 @@ jobs:
           tag_name: ${{ needs.build_maps.outputs.versionName }}-${{ needs.build_maps.outputs.versionCode }}
           files: |
             ./**/Gallery-*.apk
+            ./**/Gallery-*.apk.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
