--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity
             android:name=".feature_node.presentation.main.MainActivity"
             android:exported="true"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:theme="@style/Theme.Gallery.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -72,6 +73,7 @@
             android:name=".feature_node.presentation.standalone.StandaloneActivity"
             android:exported="true"
             android:launchMode="singleTask"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
@@ -117,6 +119,7 @@
             android:name=".feature_node.presentation.picker.PickerActivity"
             android:exported="true"
             android:launchMode="singleTask"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.PICK"/>
@@ -135,6 +138,7 @@
         <activity
             android:name=".feature_node.presentation.wallpaper.SetWallpaperActivity"
             android:exported="true"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:launchMode="singleInstance">
             <intent-filter android:label="@string/set_wallpaper">
                 <action android:name="android.intent.action.ATTACH_DATA"/>
@@ -145,6 +149,7 @@
 
         <activity
             android:name=".feature_node.presentation.edit.EditActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:exported="true">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.EDIT"/>
