--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ benchmarkMacroJunit4 = "1.2.4"
 biometric = "1.2.0-alpha05"
 appcompat = "1.7.0"
 coilVersion = "3.0.0-alpha06"
+composeVideo = "1.2.0"
 coreSplashscreen = "1.0.1"
 fuzzywuzzy = "1.4.0"
 exifinterface = "1.3.7"
@@ -22,7 +23,6 @@ compose-bom = "2024.06.00"
 hilt = "2.51"
 material = "1.12.0"
 material3 = "1.2.1"
-media3Ui = "1.3.1"
 media3Exoplayer = "1.3.1"
 navigation-runtime-ktx = "2.7.7"
 pinchzoomgrid = "0.0.5"
@@ -45,8 +45,11 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-exifinterface = { module = "androidx.exifinterface:exifinterface", version.ref = "exifinterface" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime" }
-androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Ui" }
+androidx-media3-exoplayer-dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "media3Exoplayer" }
+androidx-media3-exoplayer-hls = { module = "androidx.media3:media3-exoplayer-hls", version.ref = "media3Exoplayer" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
+androidx-media3-session = { module = "androidx.media3:media3-session", version.ref = "media3Exoplayer" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-runtime-ktx" }
 androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstaller" }
 
@@ -72,6 +75,7 @@ compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name= "ui-tooling-preview" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "composealpha" }
 compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+compose-video = { module = "io.sanghun:compose-video", version.ref = "composeVideo" }
 
 # Compose-shimmer
 compose-shimmer = { group = "com.valentinilk.shimmer", name = "compose-shimmer", version = "1.3.0"}
