--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
 agp = "8.3.2"
+avifCoderCoil = "1.8.0"
 benchmarkMacroJunit4 = "1.2.4"
 biometric = "1.2.0-alpha05"
 appcompat = "1.7.0"
-coilVersion = "3.0.0-alpha06"
+coilVersion = "3.0.0-alpha08"
 composeVideo = "1.2.0"
 coreSplashscreen = "1.0.1"
 fuzzywuzzy = "1.4.0"
@@ -33,8 +34,8 @@ datastore = "1.1.1"
 securityCrypto = "1.1.0-alpha06"
 uiautomator = "2.3.0"
 zoomable = "1.6.1"
-zoomableImageCoil = "0.11.2"
-composealpha = "1.7.0-beta03"
+zoomableImageCoil = "0.12.1"
+composealpha = "1.7.0-beta06"
 
 [libraries]
 # AndroidX
@@ -56,6 +57,7 @@ androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstall
 # Coil
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
+avif-coder-coil = { module = "com.github.awxkee:avif-coder-coil", version.ref = "avifCoderCoil" }
 coil-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coilVersion" }
 coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coilVersion" }
 coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coilVersion" }
