--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-adaptive = "1.1.0-alpha01"
+adaptive = "1.1.0-alpha02"
 agp = "8.6.0"
 avifCoderCoil = "1.8.0"
 benchmarkMacroJunit4 = "1.3.0"
@@ -11,7 +11,7 @@ coreSplashscreen = "1.0.1"
 fuzzywuzzy = "1.4.0"
 exifinterface = "1.3.7"
 gpuimage = "2.1.0"
-graphicsShapes = "1.0.0"
+graphicsShapes = "1.0.1"
 jxlCoder = "2.1.10"
 kotlin = "2.0.20"
 kotlinCoroutinesVersion = "1.8.1"
@@ -21,14 +21,14 @@ junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
 lazycolumnscrollbar = "2.2.0"
-lifecycle-runtime = "2.8.4"
-activity-compose = "1.9.1"
+lifecycle-runtime = "2.8.5"
+activity-compose = "1.9.2"
 hilt = "2.52"
 hiltCommon = "1.2.0"
 material = "1.12.0"
-material3 = "1.3.0-rc01"
+material3 = "1.3.0"
 media3Exoplayer = "1.4.1"
-navigation-runtime-ktx = "2.7.7"
+navigation-runtime-ktx = "2.8.0"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.3.1"
 room = "2.6.1"
@@ -37,7 +37,7 @@ datastore = "1.1.1"
 securityCrypto = "1.1.0-alpha06"
 sketch = "4.0.0-alpha08"
 uiautomator = "2.3.0"
-composealpha = "1.7.0-rc01"
+composealpha = "1.7.0"
 kotlinxSerializationJson = "1.7.2"
 workRuntimeKtx = "2.9.1"
 zoomimageViewSketch = "1.1.0-beta01"
