--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Get versionCode
         id: versioncode
-        run: echo "versionCode=$(grep 'versionCode' app/build.gradle.kts | awk '{ print $3 }')" >> $GITHUB_OUTPUT
+        run: echo "versionCode=$(grep 'versionCode' app/build.gradle.kts | awk '{ print $3 }' | head -n 1)" >> $GITHUB_OUTPUT
       - name: Get versionName
         id: versionname
         run: echo "versionName=$(grep 'versionName' app/build.gradle.kts | head -1 | awk -F\" '{ print $2 }')" >> $GITHUB_OUTPUT
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Get versionCode
         id: versioncode
-        run: echo "versionCode=$(grep 'versionCode' app/build.gradle.kts | awk '{ print $3 }')" >> $GITHUB_OUTPUT
+        run: echo "versionCode=$(grep 'versionCode' app/build.gradle.kts | awk '{ print $3 }' | head -n 1)" >> $GITHUB_OUTPUT
       - name: Get versionName
         id: versionname
         run: echo "versionName=$(grep 'versionName' app/build.gradle.kts | head -1 | awk -F\" '{ print $2 }')" >> $GITHUB_OUTPUT
