--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-adaptive = "1.1.0-alpha07"
-agp = "8.6.1"
-aire = "0.15.3"
-avifCoderCoil = "1.8.0.1"
+adaptive = "1.1.0-alpha08"
+agp = "8.7.3"
+aire = "0.15.5"
+avifCoderCoil = "2.0.10"
 benchmarkMacroJunit4 = "1.3.3"
 biometric = "1.2.0-alpha05"
 appcompat = "1.7.0"
@@ -13,9 +13,9 @@ fuzzywuzzy = "1.4.0"
 exifinterface = "1.3.7"
 graphicsShapes = "1.0.1"
 jxlCoder = "2.1.10"
-kotlin = "2.0.21"
+kotlin = "2.1.0"
 kotlinCoroutinesVersion = "1.9.0"
-ksp = "2.0.21-1.0.26"
+ksp = "2.1.0-1.0.29"
 core-ktx = "1.15.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
@@ -23,27 +23,27 @@ espresso-core = "3.6.1"
 lazycolumnscrollbar = "2.2.0"
 lifecycle-runtime = "2.8.7"
 activity-compose = "1.9.3"
-hilt = "2.52"
+hilt = "2.53.1"
 hiltCommon = "1.2.0"
 material = "1.12.0"
 material3 = "1.3.1"
-media3Exoplayer = "1.4.1"
-navigation-runtime-ktx = "2.8.4"
+media3Exoplayer = "1.5.0"
+navigation-runtime-ktx = "2.8.5"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.4.1"
 room = "2.6.1"
 accompanist = "0.36.0"
 datastore = "1.1.1"
 securityCrypto = "1.1.0-alpha06"
-sketch = "4.0.0-beta02"
+sketch = "4.0.0"
 tensorflowLite = "2.16.1"
 tensorflowLiteTaskVision = "0.4.4"
 tensorflowLiteGpu = "2.16.1"
 uiautomator = "2.3.0"
-composealpha = "1.8.0-alpha06"
+composealpha = "1.8.0-alpha07"
 kotlinxSerializationJson = "1.7.3"
 workRuntimeKtx = "2.10.0"
-zoomimageViewSketch = "1.1.0-rc01"
+zoomimageViewSketch = "1.1.0"
 
 [libraries]
 # AndroidX
@@ -78,7 +78,7 @@ compose-activity = { group = "androidx.activity", name = "activity-compose", ver
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "composealpha" }
 compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "composealpha" }
 compose-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-runtime" }
-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version = "1.7.5" }
+compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version = "1.7.6" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 compose-material3-window-size = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "composealpha" }
