--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-adaptive = "1.1.0-alpha08"
-agp = "8.7.3"
+adaptive = "1.1.0-beta01"
+agp = "8.8.0"
 aire = "0.15.5"
 avifCoderCoil = "2.0.10"
 benchmarkMacroJunit4 = "1.3.3"
@@ -13,37 +13,37 @@ fuzzywuzzy = "1.4.0"
 exifinterface = "1.3.7"
 graphicsShapes = "1.0.1"
 jxlCoder = "2.1.10"
-kotlin = "2.1.0"
+kotlin = "2.1.10"
 kotlinCoroutinesVersion = "1.9.0"
-ksp = "2.1.0-1.0.29"
+ksp = "2.1.10-1.0.29"
 core-ktx = "1.15.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
 lazycolumnscrollbar = "2.2.0"
 lifecycle-runtime = "2.8.7"
-activity-compose = "1.9.3"
+activity-compose = "1.10.0"
 hilt = "2.53.1"
 hiltCommon = "1.2.0"
 material = "1.12.0"
 material3 = "1.3.1"
 media3Exoplayer = "1.5.1"
-navigation-runtime-ktx = "2.8.5"
+navigation-runtime-ktx = "2.8.6"
 pinchzoomgrid = "0.0.5"
 profileinstaller = "1.4.1"
 room = "2.6.1"
 accompanist = "0.37.0"
-datastore = "1.1.1"
+datastore = "1.1.2"
 securityCrypto = "1.1.0-alpha06"
-sketch = "4.0.0"
+sketch = "4.0.2"
 tensorflowLite = "2.16.1"
 tensorflowLiteTaskVision = "0.4.4"
 tensorflowLiteGpu = "2.16.1"
 uiautomator = "2.3.0"
-composealpha = "1.8.0-alpha07"
+composealpha = "1.8.0-beta01"
 kotlinxSerializationJson = "1.7.3"
 workRuntimeKtx = "2.10.0"
-zoomimageViewSketch = "1.1.0"
+zoomimageViewSketch = "1.1.1"
 
 [libraries]
 # AndroidX
