Remove versionCode from stable release tag
Fixes F-Droid releasing

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -140,7 +140,7 @@ jobs:
           name: ${{ needs.build_maps.outputs.versionName }}-${{ needs.build_maps.outputs.versionCode }} Release
           body_path: ${{ needs.build_maps.outputs.versionName }}-${{ needs.build_maps.outputs.versionCode }}-changelog.txt
           prerelease: false
-          tag_name: ${{ needs.build_maps.outputs.versionName }}-${{ needs.build_maps.outputs.versionCode }}
+          tag_name: ${{ needs.build_maps.outputs.versionName }}
           files: |
             ./**/Gallery-*.apk
         env:
