--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,7 +183,13 @@
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove" />
+            android:exported="false"
+            tools:node="remove">
+            <meta-data
+                android:name="com.dot.gallery.ui.ComposeInitializer"
+                android:value="androidx.startup"
+                />
+        </provider>
 
     </application>
 
